--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.0"
+		"@actions/github": "^2.2.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.31.1",
