--- a/.github/ISSUE_TEMPLATE/10_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/10_bug_report.yml
@@ -33,7 +33,7 @@ body:
       - Interactive Server (Interactive server-side rendering (interactive SSR) using Blazor Server)
       - Interactive WebAssembly (Client-side rendering (CSR) using Blazor WebAssembly)
       - Interactive Auto (Server, then client)
-    default: 0
+    default: 1
   validations:
     required: true    
 - type: textarea
@@ -47,6 +47,13 @@ body:
       - If we will not be able to repro the behavior you're reporting.
       - If the repro project is attached as a `.zip` file.
       - If the GitHub repro project is set to `Private`.
+      
+      如果您选择 `bug` 模板说明您是提交一个 BUG 而不是来描述一个您遇到的问题结果，所以必须提供复现步骤与复现工程。如果不提供我们将不予处理，机器人将于一段时间后自动关闭本 `Issue`。
+      
+      **最小复现工程** 
+      - 删除 `bin` `obj` 文件夹后打包成 `zip` 压缩包的文件
+      - 公开 `github` 仓库地址
+      - 私有 `github` 仓库地址（邀请我）
   validations:
     required: true
 - type: textarea
