--- a/.github/ISSUE_TEMPLATE/10_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/10_bug_report.yml
@@ -48,7 +48,9 @@ body:
       - If the repro project is attached as a `.zip` file.
       - If the GitHub repro project is set to `Private`.
       
-      如果您选择 `bug` 模板说明您是提交一个 BUG 而不是来描述一个您遇到的问题结果，所以必须提供复现步骤与复现工程。如果不提供我们将不予处理，机器人将于一段时间后自动关闭本 `Issue`，请在下方文本框内写清楚，运行后点击那个页面，或者点击那个按钮复现问题，文件上传拖动到下方文本框内即可。
+      如果您选择此模板说明您是想提交一个组件的 `BUG` 而不是来描述一个您遇到的问题结果，所以必须提供复现步骤与复现工程。如果不提供我们将不予处理，机器人将于一段时间后自动关闭本 `Issue`
+
+      请在下方文本框内写清楚，运行后点击那个页面，或者点击那个按钮复现问题，文件上传拖动到下方文本框内即可。
       
       **最小复现工程** 
       - 删除 `bin` `obj` 文件夹后打包成 `zip` 压缩包的文件
